# notes

./: .dockerignore  .editorconfig  .env.template  Cargo.toml  Dockerfile
backend/: .env.template  Cargo.toml
backend/src/: firebase.rs  main.rs
backend/src/models/: note.rs
backend/src/services/: create.rs  get.rs  list.rs  mod.rs  update.rs
src/: main.rs  shutdown.rs
src/frontend/: index.rs  mod.rs  view_note.rs
src/models/: mod.rs  note.rs
src/services/: create.rs  delete.rs  get.rs  list.rs  mod.rs  not_found.rs  update.rs
static/: index.css
templates/: index.html  view_note.html
