[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["macros"] }
chrono = "0.4.24"
gcp_auth = "0.7.5"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.1"
uuid = { version = "1.3.0", features = ["v4"] }
